tests/transpiler/x/java/values_builtin.error
exit status 1
Main.java:5: error: cannot find symbol
        System.out.println(values(m));
                           ^
  symbol:   method values(Map<String,Integer>)
  location: class Main
1 error
