tests/transpiler/x/java/values_builtin.java
public class Main {
    static java.util.Map<String, Integer> m = java.util.Map.of("a", 1, "b", 2, "c", 3);

    public static void main(String[] args) {
        System.out.println(values(m));
    }
}
